--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ilyasrasyid",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http:/ilyasrasyid12.github.io/ilyas.github.io",
+  "homepage": "http:/ilyasrasyid12.github.io/website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
